src/test/deca/context/invalid/class/49-declMethodeSigDiff1.deca
/* Description:
     teste la régle (2.6) Déclaration d'une méthode qui existe déja dans la class supérieur,
     mais qui n'a pas la meme signature (nombre de parametre different)

    Historique:
      cree le 22/01/2020
*/

class A {
  void  methode(int a, int b, float c, C d, D d){} // methode declarer pour la premire fois ici
  }


class B extends A{
  void methode(){}
}

class C {

}
class D extends C {

}
